Fixed some major pagination bugs and changed some code structure